updated bugs fix
